Upgrade discovery (#56)
* fix broken image link [ci skip]

* update a few images with old nav bar that i missed [ci skip]

* update pulses doc re archiving [ci skip]

* Make overworld xray title spacing consistent

* Test fix :wrench:

* Add root collection to effective_ancestors

* Fix bodged merge

* Lint fix :shirt:

* Remove special logic for collection breadcrumbs now that effective_ancestors includes root collection

* Add 'underline' mode to Radio component, use it everywhere

* small copy edit [ci skip]

* Move collections permissions to admin panel, add data/collections tab, add collections breadcrumbs

* Don't decrypt obviously not encrypted strings

When `MB_ENCRYPTION_SECRET_KEY` is set, we assume that all settings
have been encrypted. If a setting has not been encrypted, decryption
fails, but the original setting is returned. This causes Metabase to
behave correctly but have very noisy logging as when the decrypt fails
an error is logged.

This commit changes the `maybe-decrypt` behavior to more closely
examine the ciphertext to ensure it is something that can be
decrypted. If it looks like something that can be decrypted, but
decription fails (i.e. what if an unencrypted string is multiple of
the cipher block size) then log a warning as it's probably not an
issue, but could be.

Fixes #8151

* Fix flow/lint

* Update snapshot

* Fix DatabaseEditApp intergation test

* remove db xray link on overworld (#8183)

* Fix Docker OOM config link

* Correcting the table format

* use our own UI components (#7295)

* ensure searchText has a value before redirecting to results (#8184)

* ensure searchText has a value before redirecting to results

* fix check

* visual and spacing tweaks and update snapshots

* Give all groups root collection r/w perms

* Fix data ref sidebar not filling viewport and fullscreen dashboards not hiding nav bar

* Remove unnecessary use of cx

* Other rando Groups s